# frontend-forge-controller

./: .gitignore  Cargo.toml  README.md  lefthook.yml
.github/workflows/: crd-check.yml  docker-images.yml
config/crd/bases/: frontend-forge.io_frontendintegrations.yaml  frontend-forge.io_jsbundles.yaml  frontend-forge.kubesphere.io_frontendintegrations.yaml
config/manager/: controller-deployment.yaml
config/rbac/: controller-rbac.yaml  runner-rbac.yaml  webhook-certgen-rbac.yaml
config/samples/: fi-inspecttask.yaml  frontend-forge_v1alpha1_frontendintegration.yaml
config/webhook/: controller-webhook.yaml
crates/api/: Cargo.toml
crates/api/examples/: print_crds.rs
crates/api/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/controller/: Cargo.toml  Dockerfile
crates/controller/src/: main.rs  webhook.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: lib.rs  v1.rs
crates/runner/: Cargo.toml  Dockerfile
crates/runner/examples/: build_from_fi.rs
crates/runner/src/: main.rs  manifest.rs
crates/runner/src/manifest/: v1.rs
scripts/: dev-webhook.sh
spec/: Manifest.md  crds.md  design.md
xtask/: Cargo.toml
xtask/src/: main.rs
