[package]
name = "frontend-forge-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
