[package]
name = "frontend-forge-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frontend-forge-api = { path = "../api" }
frontend-forge-common = { path = "../common" }
kube.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
