[package]
name = "frontend-forge-runner"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frontend-forge-api = { path = "../api" }
frontend-forge-common = { path = "../common" }
k8s-openapi.workspace = true
kube.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
